Add README with images of sample plots

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ venv/
 output/*
 !output/avg_response_time_plots.zip
 !output/extra_info_plots.zip
+!output/sample_images*
 other_links.txt
 __pycache__
